--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/all.min.css">
-        <link rel="stylesheet" href="js/carousel-lazy-loading-square/square1.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/grid.css">
+        <link rel="stylesheet" href="../css/all.min.css">
+        <link rel="stylesheet" href="../js/carousel-lazy-loading-square/square1.min.css">
+        <link rel="stylesheet" href="../css/style.css">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Lê Hồng Phúc</title>
     </head>
