--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="js/carousel-lazy-loading-square/square1.min.css">
         <link rel="stylesheet" href="css/style.css">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lê Hồng Phúc</title>
     </head>
     <body>
